# dd2358-work

./: .gitignore
asm1/: Diffusion.py  Diffusion.py.lprof  JuliaSet.py  JuliaSet.py.lprof  asm1.ipynb  diffusion_profile.stats  profile.stats
asm2/: asm2.ipynb  asm2.md  conway.py  conway_original.py
asm2/Bonus Assignment Html/: py-modindex.html
asm2/exercise3/: main.py
asm3/: asm3.ipynb  asm3.md  gauss_seidel_cy.html  gauss_seidel_cy_typed.html  mandelbrot_cy.c  mandelbrot_cy.cpp  mandelbrot_cy.pyx  setup.py
asm3/.ipynb_checkpoints/: asm3-checkpoint.ipynb
asm4/: asm4.ipynb  asm4.md  run_performance_comparison.py  vtk_export.py  wildfire_sim_worker.py
asm4/.ipynb_checkpoints/: asm4-checkpoint.ipynb
asm4/ocean_vtk/: ocean_step_000.vtk  ocean_step_001.vtk  ocean_step_002.vtk  ocean_step_003.vtk  ocean_step_004.vtk  ocean_step_005.vtk  ocean_step_006.vtk  ocean_step_007.vtk  ocean_step_008.vtk  ocean_step_009.vtk  ocean_step_010.vtk  ocean_step_011.vtk  ocean_step_012.vtk  ocean_step_013.vtk  ocean_step_014.vtk  ocean_step_015.vtk  ocean_step_016.vtk  ocean_step_017.vtk  ocean_step_018.vtk  ocean_step_019.vtk  ocean_step_020.vtk  ocean_step_021.vtk  (+78 more)
docs/: conf.py  index.rst
project/: abstract.docx  project.ipynb  project.md  pyproject.toml  renderer_cython_fun.c  renderer_cython_fun.html  renderer_cython_fun.pyx  renderer_cython_setup.py  renderer_original.py  renderer_torch.py  renderer_ultimate.py
project/prun_out/: lprun_render_original  lprun_transfer_original  mprun_render_180  mprun_render_original  mprun_transfer_original  prun_original
(+48 files in other folders)
